<resources>
    <string name="app_name">Capture The Tag</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_flag_write">Setup Flag</string>
    <string name="flag_name_hint">Flag Name</string>
    <string name="approach_tag_label">Approach Tag To Program&#8230;</string>
    <string name="title_activity_start_game">Start Game</string>
    <string name="team_one_hint">Team 1 name</string>
    <string name="team_two_hint">Team 2 name</string>
    <string name="add_team">Add Team</string>
    <string name="submit">Submit</string>
    <string name="game_name_hint">Game Name</string>
    <string name="join">Join</string>
    <string name="title_activity_game_lobby">Game Lobby</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="player_name">Player Name</string>
    <string name="go_to_lobby">Go To Lobby</string>
    <string name="title_activity_read_flag">Read Flag</string>
    <string name="title_activity_game_list">Game List</string>
    <string name="set_flag">Set Flags</string>
    <string name="leave">Leave</string>
    <string name="scan_ready">Scan a Flag to Capture&#8230;</string>
    <string name="title_activity_login">CTT Login</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="enter_tag_name_label">Enter Tag Name&#8230;</string>
</resources>
