<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_flag_write"
        android:title="@string/title_activity_flag_write"
        app:showAsAction="never"/>
    <item android:id="@+id/action_start_game"
        android:title="@string/title_activity_start_game"
        app:showAsAction="never"/>
    <item android:id="@+id/action_read_tag"
        android:title="@string/title_activity_read_flag"
        app:showAsAction="never"/>
    <item android:id="@+id/action_game_list"
        android:title="@string/title_activity_game_list"
        app:showAsAction="never"/>
    <item android:id="@+id/action_login"
        android:title="@string/title_activity_login"
        app:showAsAction="never"/>
</menu>
