<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="adammcneilly.capturethetag.LoginActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_margin="32dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/player_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/player_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/player_name"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/join_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_name_layout"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/join_game"/>

        <Button
            android:id="@+id/create_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/join_game"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/create_game"/>

    </RelativeLayout>

</LinearLayout>
